<resources>
    <string name="app_name">КАРАТЄЛЬ</string>
    <string name="facebook_app_id">601206453369141</string>

    <!--GUI strings-->
    <string name="go_on">Далі</string>
    <string name="email">Email</string>
    <string name="passw">Пароль</string>
    <string name="forgot_passw"><u>Забули пароль?</u></string>
    <string name="login">УВІЙТИ</string>
    <string name="facebook_login">УВІЙТИ ЧЕРЕЗ ФЕЙСБУК</string>
    <string name="sign_up"><u>Створити профіль</u></string>
    <string name="title_activity_sign_up">Реєстрація</string>
    <string name="add_photo_video">Додати фото, відео</string>
    <string name="punish">ПОКАРАТИ</string>
    <string name="save">ЗБЕРЕГТИ ЗАЯВКУ</string>
    <string name="takePhoto">Додати фото</string>
    <string name="takeVideo">Додати відео</string>
    <string name="or">АБО</string>
    <string name="forgot_how">Забули, як користуватися додатком?</string>
    <string name="instruction">Інструкція</string>
    <string name="register">ЗАРЕЄСТРУВАТИСЯ</string>
    <string name="surname">Прізвище</string>
    <string name="name">Ім’я</string>
    <string name="second_name">По батькові</string>
    <string name="phone">Tелефон</string>

    <!--needed to show extra digit icon with the number of claims-->
    <string name="menu_item_claims">Заявки</string>

    <!--technical-->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!--texts-->
    <string name="violation_header">Успіх розгляду вашого звернення залежить від точності наданої інформації</string>
    <string name="about_1">КАРАТЄЛЬ — це безкоштовний мобільний додаток, за допомогою якого можна в кілька дотиків на смартфоні поскаржитися на правопорушення у різних сферах.\n\nОтриману інформацію опрацьовують юристи громадської організації «Фундація.101» та вживають заходів для вирішення цих проблем, звертаючись до відповідних органів влади та приватних структур.\n\nПісля отримання відповіді ви зможете переглянути її у додатку на своєму смартфоні.</string>
    <!--<string name="about_2">Проект реалізує громадська організація «Фундація.101» за підтримки People’s Project.</string>-->
    <string name="personal_data_agree">Даю згоду на обробку та зберігання моїх персональних даних</string>

    <!-- violation disclaimers, should be present even if empty do avoid NullPointException-->
    <string name="Bribe_disclaimer">Це скарга виключно на посадову особу органу влади. На відео має бути чітко зафіксовано сам інцидент та обличчя особи, яка вимагала з Вас кошти</string>
    <string name="Insult_disclaimer">Це скарга на хамство виключно з боку державного службовця або обслуговуючого персоналу у сферах надання послуг чи продажу товарів. Якщо Вам нагрубіянив сусід — не варто відправляти заявку, адже Вам буде відмовлено у розгляді. На відео має бути чітко зафіксований сам інцидент та обличчя особи, яка образила.</string>
    <string name="SaleOfGood_disclaimer">Чітко зафіксуйте на фото факт того, що термін дійсно вийшов. Наприклад, термін придатності і дату виготовлення товару або позначення, до якої дати необхідно вжити товар. Поточні дата та час фіксуються автоматично</string>
    <string name="NoSmoking_disclaimer">УВАГА! Ви надсилаєте скаргу саме на заклад громадського харчування, який дозволяє курити у своїх приміщеннях. Якщо ви хочете покарати саме курця — прямо зараз зателефонуйте на номер телефону 102 та  викличте наряд поліції.</string>
    <string name="Damage_disclaimer"></string>
    <string name="PitRoad_disclaimer"></string>
    <string name="WrongParking_disclaimer"></string>

    <!--violation server identifiers-->
    <string name="Bribe_server">bribes</string>
    <string name="Insult_server">insults</string>
    <string name="SaleOfGood_server">sale_of_goods</string>
    <string name="NoSmoking_server">no_smokings</string>
    <string name="Damage_server">damages</string>
    <string name="PitRoad_server">pit_roads</string>
    <string name="WrongParking_server">wrong_parkings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="do_punish">Покарати за порушення</string>
    <string name="about_header">Про додаток</string>
    <string name="change_password">ЗМІНИТИ ПАРОЛЬ</string>
    <string name="text_forgot_password">Забули пароль? Введіть свій email і ми відправимо посилання для його відновлення.</string>
    <string name="check_email">ПЕРЕВІРИТИ EMAIL</string>
    <string name="text_forgot_password2">Перевірте свій email. Ми надіслали інструкцію для відновлення пароля.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_header">Профіль</string>
    <string name="partners_header">Наші партнери</string>
    <string name="sponsors_header">Офіційні спонсори</string>
    <string name="tap_to_enter">Натисніть на екран, щоб продовжити</string>
    <string name="user_created">Обліковий запис створено. Перевірте email.</string>
    <string name="you_have_made_no_requests_yet">Ви ще не створили жодної  заявки</string>
    <string name="create_request">СТВОРИТИ ЗАЯВКУ</string>
    <string name="punishment_requests">Заявки на покарання</string>
    <string name="contacts_header">Зворотній зв’язок</string>
    <string name="contacts"><b>Якщо у вас є питання чи пропозиції — зв’яжіться з нами</b></string>
    <string name="office_phone">+38 (044) 209-69-33</string>
    <string name="office_mail">mail@karatel.ua</string>
    <string name="office_address">04215, м. Київ, пр. Георгія Гонгадзе, 32-Б.\nГО «Фундація.101»</string>
    <string name="url_foundation101">https://www.foundation101.org</string>
    <string name="url_peoples_project">http://www.peoplesproject.com</string>
    <string name="url_donate">https://karatel.foundation101.org/support/</string>
    <string name="change_profile_photo">Змінити фото профілю</string>
    <string name="cancel">СКАСУВАТИ</string>
    <string name="choose_picture">Оберіть картинку</string>
    <string name="change_email">Змінити email</string>
    <string name="change">Змінити</string>
    <string name="new_email">Новий email</string>
    <string name="enter_new_email">Введіть новий email</string>
    <string name="are_you_sure">Ви впевнені?</string>
    <string name="no">НІ</string>
    <string name="yes">ТАК</string>
    <string name="email_changed">Email змінено</string>
    <string name="ok">OK</string>
    <string name="current_password">ПОТОЧНИЙ ПАРОЛЬ</string>
    <string name="new_password">НОВИЙ ПАРОЛЬ</string>
    <string name="your_password_is_changed_successfully">Ваш пароль успішно змінений</string>
    <string name="information">Інформація</string>
    <string name="request_status">Статус заявки</string>
    <string name="addedPhotoVideo">Додані фото, відео</string>
    <string name="news_header">Новини</string>
    <string name="bindProfile">Зв’язати профіль</string>
    <string name="facebook_profile_binded">Профіль успішно зв’язаний!</string>
    <string name="doSort"><b>Сортувати</b></string>
    <string name="byStatus">За статусом</string>
    <string name="byDate">За датою</string>
    <string name="operatorComment">Коментар оператора</string>
    <string name="answerToRequest">Відповідь на звернення</string>
    <string name="answerBy">Відповідь надана</string>
    <string name="estimateGivenAnswer">Оцініть надану відповідь</string>
    <string name="cannot_define_location">Неможливо виконати дію, оскільки ваше місцезнаходження не знайдено</string>
    <string name="requestSaved">Заявка збережена</string>
    <string name="complainSaved">Скарга збережена</string>
    <string name="show_details">Показати подробиці</string>
    <string name="hide_details">Сховати подробиці</string>
    <string name="chooseEmailClient">Яка поштова скринька?</string>
    <string name="cannot_connect_server">Неможливо зв’язатись з сервером. Спробуйте ще раз пізніше</string>
    <string name="profile_changes_saved">Зміни до профілю збережено</string>
    <string name="error">помилка</string>
    <string name="operation_cancelled">Операцію відмінено</string>
    <string name="cannot_write_file">Неможливо записати файл</string>
    <string name="requestSent">Заявка відправлена</string>
    <string name="invalid_email">Електронна адреса не є дійсною</string>
    <string name="your_estimation">Ваша оцінка</string>
    <string name="weInSocials">Ми в соціальних мережах</string>
    <string name="loggingOut">Почекайте, виконується вихід з додатку</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="open_settings">Відкрити опції для налаштування служб місцезнаходження?</string>
    <string name="refresh">Оновити?</string>
    <string name="enter_current_password">Введіть поточний пароль</string>
    <string name="enter_new_password">Введіть новий пароль</string>
    <string name="turn_off_mock_locations">Вимкніть емуляцію місцезнаходження</string>
    <string name="create_new_bases_on_this">Створити нову на базі цієї</string>
    <string name="check_email_to_approve">Для підтвердження змін перевірте свою електронну пошту</string>
    <string name="facebook_disclaimer">Увійти через Facebook можливо, якщо Ви створили профіль та зв\'язали його зі своїм FB-акаунтом</string>
    <string name="you_request_is_being_moderated">Ваша заявка знаходиться на модерації</string>
    <string name="media_format_not_supported">Формат медіафайлу не підтримується</string>
    <string name="request_too_big">Розмір фото та відео файлів завеликий. Максимум 100Mb. Видаліть зайві матеріали.</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="complains_book">Книга скарг</string>
    <string name="video_tutorial">Відеонавчання</string>
    <string name="complainsBookDisclaimer">Направляючи скаргу через цей розділ, Ви надаєте згоду на передачу Ваших персональних даних. Звернення буде направлено одразу в організацію, а не через оператора системи «КАРАТЄЛЬ».</string>
    <string name="sendComplain">Відправити скаргу</string>
    <string name="saveComplain">Зберегти скаргу</string>
    <string name="What_happened">Що сталося</string>
    <string name="Describe_what_happened">Опишіть, що сталося</string>
    <string name="drafts">Чернетки</string>
    <string name="pressHereToSeeAnswer">Натисніть тут, щоб переглянути відповідь</string>
    <string name="attention">Увага!</string>
    <string name="allChangesWillBeLost">Всі не збережені зміни будуть скасовані. Ви дійсно бажаєте вийти в головне меню?</string>
    <string name="edit"> Редагувати</string>
    <string name="karatel">Каратєль</string>

    <string name="youTubeShareButtonContentDescription">Share</string>
    <string name="changeStrategy">КАРАТЄЛЬ змінює стратегію розвитку проекту. Відтепер пріоритетним напрямком роботи обираємо інтеграцію з міськими сервісами.\n\nПоки що прибираємо можливість відправляти скарги через юристів ГО \"Фундація.101\".\n\nПротягом 2019 року заплановано об\'єднати наш додаток з Контактним центром міста Києва 1551. У планах підключити й інші міста.\n\nНаразі ви можете користуватися розділом \"Книга скарг\", функціонал якого не зміниться.</string>
</resources>
