<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.foundation101.karatel.activity.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:theme="@style/AppToolBar"
                app:titleTextAppearance="@style/TextSize16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/facebook_disclaimer"
                android:textSize="16sp"
                android:id="@+id/tvFb"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/error_color"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:id="@+id/textViewSignUpErrorMessage"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginTop="40dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="1dp"
                android:id="@+id/etSignUpEmail"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/etSignUpPassword"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="1dp"
                android:id="@id/etSignUpPassword"
                android:inputType="textPassword"
                android:hint="@string/passw" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:id="@+id/etSignUpSurname"
                android:inputType="textPersonName"
                android:hint="@string/surname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="1dp"
                android:id="@+id/etSignUpName"
                android:inputType="textPersonName"
                android:hint="@string/name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="1dp"
                android:id="@+id/etSignUpSecondName"
                android:inputType="textPersonName"
                android:hint="@string/second_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="1dp"
                android:id="@+id/etSignUpPhone"
                android:inputType="phone"
                android:hint="@string/phone" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/personal_data_agree"
                android:id="@+id/checkBoxPersonalDataAgreement" />

            <!--empty view to push the rest down the screen-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/buttonRegister"
                style="@style/GreenButton"
                android:onClick="signUp"
                android:enabled="false"/>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/frame_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlProgress"
        android:onClick="empty"/>
</RelativeLayout>