<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.dnk.punisher.activity.ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:theme="@style/AppToolBar" />

    <ImageView
        android:id="@+id/imageViewForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ill_forget_password"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password"
        android:textSize="16sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="1dp"
        android:id="@+id/editTextForgotPasswordEmail"/>

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:onClick="proceedWithPasswordRenovation"
        android:layout_marginTop="20dp" />

</LinearLayout>
