<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light">

        <ImageButton
            android:layout_width="68dp"
            android:layout_height="76dp"
            android:id="@+id/uploadButton"
            android:src="@mipmap/ic_upload"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/add_photo_video"
            android:id="@+id/addedPhotoVideoTextView"/>

        <ImageButton
            android:layout_width="68dp"
            android:layout_height="76dp"
            android:layout_gravity="end"
            android:id="@+id/imageButtonAddEvidence"
            android:src="@mipmap/ic_plus"
            android:background="@drawable/selector_common_button"
            android:onClick="photoVideoPopupMenu"/>
    </LinearLayout>

    <org.foundation101.karatel.view.ExpandedGridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="12dp"
        android:background="@android:color/white"
        android:id="@+id/evidenceGridView"
        android:numColumns="4"
        android:columnWidth="@dimen/thumbnail_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/emptyView"
        android:visibility="gone">
    </View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/punish"
        android:enabled="false"
        android:id="@+id/punishButton"
        style="@style/GreenButton"
        android:onClick="punish"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:onClick="saveToBase"
        style="@style/GreyButton"/>

</LinearLayout>